Done getting started

--- a/docs/credit.mdx
+++ b/docs/credit.mdx
@@ -24,7 +24,7 @@ import CreditItem from "../src/components/CreditItem";
 - ✨Ganyu✨#7162
 - 機車#1234
 - 海帶#2994
-- NathanTW#9737
+- Nat1an#0001
 - 😙💟/#3042
 - 無言死宅卡比 (圖奇實況主)
 - 芽夢之仙(_ _)#8005
