--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,6 +1,5 @@
 ---
-sidebar_position: 1
-title: 入門
+title: 引言
 description: YEE式機器龍是一隻全中文化的Discord機器人，我們不只提供音樂的服務，還有像是動態語音頻道、跨群聊天、等你不會想錯過的好東西
 ---
 
