Add RPG to summary of features

--- a/docs/features/index.mdx
+++ b/docs/features/index.mdx
@@ -1,9 +1,8 @@
 ---
 title: 特色功能
-description: 這個章節會講述幾個 YEE式機器龍 的主打特色功能
 ---
 
-在這個章節，我們會討論幾個 YEE式機器龍 的主打特色功能，像是...
+在這個章節，我們會討論幾個 **YEE式機器龍** 的主打特色功能，像是...
 
 ### 音樂
 
@@ -13,3 +12,6 @@ description: 這個章節會講述幾個 YEE式機器龍 的主打特色功能
 
 ![動態語音演示](/img/docs/features/dynamic-voice-channels.gif)
 
+### RPG
+
+![RPG演示](/img/docs/features/rpg.png)
