Wrote documentation of basic functions for playlist system

--- a/docs/features/music/play.mdx
+++ b/docs/features/music/play.mdx
@@ -2,6 +2,9 @@
 title: 播放音樂
 ---
 
+
+import Adsense from "../../../src/components/Adsense";
+
 在這個頁面，你會學到如何使用音樂系統最基礎的功能 - **播放**
 
 ### 基本用法
@@ -21,9 +24,10 @@ title: 播放音樂
 
 ✅ 像是這樣：<br/>
 ![使用關鍵字](/img/docs/features/music/play-with-keyword.png)
+![使用支援的平台連結](/img/docs/features/music/play-with-spotify-link.png)
 
 ❌ 而不是這樣：<br/>
-![使用連結](/img/docs/features/music/play-with-link.png)
+![使用連結](/img/docs/features/music/play-with-youtube-link.png)
 :::
 
 目前機器龍支援以下平台的音樂連結：
@@ -31,3 +35,6 @@ title: 播放音樂
 * Spotify (https://open.spotify.com/track/...)
 * Apple Music (https://music.apple.com/...)
 * SoundCloud (https://soundcloud.com/...)
+* YEE式機器龍 (https://music.yeecord.com/...)
+
+<Adsense/>
