Add web panel introduction to playlist's docs

--- a/docs/features/music/playlist.mdx
+++ b/docs/features/music/playlist.mdx
@@ -2,6 +2,7 @@
 title: 播放清單
 ---
 
+
 import Adsense from "../../../src/components/Adsense";
 
 在這個頁面，你會學到如何使用音樂系統提供的 **播放清單** 功能
@@ -43,5 +44,12 @@ import Adsense from "../../../src/components/Adsense";
 使用 `/playlist remove <名稱> <歌曲>` 來移除播放清單中的歌曲：
 
 ![移除播放清單中的歌曲](/img/docs/features/music/remove-song-from-playlist.png)
+
+### 網頁面板
+
+其實，你在使用 `/playlist info` 獲得的連結不只可以用來播放， <br/>
+點進去之後，他會帶你來到一個精美的頁面，你可以在裡面查看播放清單內的歌曲
+
+![播放清單網頁面板](/img/docs/features/music/playlist-web-panel.png)
 
 <Adsense/>
