--- a/docs/tutorial/getting-started.mdx
+++ b/docs/tutorial/getting-started.mdx
@@ -3,7 +3,7 @@ title: 開始使用
 description: 這個頁面將會告訴你如何邀請 YEE式機器龍，並介紹幾個機器龍的重要功能
 ---
 
-import Adsense from "../src/components/Adsense";
+import Adsense from "../../src/components/Adsense";
 
 ## 邀請機器人
 
